--- a/package.json
+++ b/package.json
@@ -19,10 +19,17 @@
   },
   "homepage": "https://github.com/ZiberPax/RSS-Virtual-Keyboard#readme",
   "dependencies": {
-    "@babel/eslint-parser": "^7.21.3",
     "eslint": "^8.39.0",
-    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-base": "^15.0.0"
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.21.3",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.27.5"
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.8"
   }
 }
