refactor: add eslint properties, fix warnings

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,5 +15,9 @@
 // };
 
 {
-  "extends": ["airbnb/base"]
+  "extends": ["airbnb/base"],
+  "env": {
+    "browser": true
+  },
+  "camelcase": [1, {"properties": "never"}]
 }
