--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "lint": "eslint",
     "lint:fix": "eslint --fix"
@@ -20,10 +21,12 @@
   "homepage": "https://github.com/ZiberPax/RSS-Virtual-Keyboard#readme",
   "dependencies": {
     "eslint": "^8.39.0",
-    "eslint-config-airbnb-base": "^15.0.0"
+    "eslint-config-airbnb-base": "^15.0.0",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.21.3",
+    "babel-eslint": "^10.1.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-html": "^7.1.0",
